Add table and API for user preferences Closes #54
